<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoMet Map</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to CoMet Map</string>
    <string name="button_search_nearby">Search Nearby</string>
    <string name="button_advanced_search">Advanced Search</string>
    <string name="button_quick_scan">Quick Scan</string>
    <string name="title_activity_talklist">TalklistActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_searchnearby">CoMet Map</string>
    <string name="title_activity_show_detail">Show Detail</string>
    <string name="detail_caption">Detail of This Talk\n</string>
    <string name="show_direction_button_string">Show Direction</string>
    <string name="title_activity_show_direction">Show Direction</string>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="pick_date_time">Select Date and Time</string>
    <string name="search">Search</string>
    <string name="pick_place">Select Place</string>
    <string name="title_activity_ad_search">Advance Search</string>
    <string name="time_tag_string">Time:</string>
    <string name="title_tag_string">Title:</string>
    <string name="speaker_tag_string">Speaker:</string>
    <string name="location_tag_string">Location:\n</string>
    <string name="advanced_search_caption">Advanced Search List</string>
    <string name="advanced_search">Advanced Search</string>
    

</resources>


