<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/darkblue"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/caption" />

    <TextView
        android:id="@+id/textView_blank"
        android:layout_width="200dp"
        android:layout_height="50dp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_nearby"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search_nearby"
            android:width="@dimen/main_button" />

        <Button
            android:id="@+id/button_advanced"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_advanced_search"
            android:width="@dimen/main_button" 
            
            />

        <Button
            android:id="@+id/button_talklist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_quick_scan"
            android:width="@dimen/main_button" />
    </LinearLayout>

</LinearLayout>