<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowDetail" >

    <LinearLayout
        android:id="@+id/show_detail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/show_detail_header"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/darkblue"
            android:text="@string/detail_caption"
            android:textColor="@color/white"
            android:textSize="@dimen/caption" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/blank_space"
                android:text="" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="@integer/maxline"
                android:text="TextView"
                android:textSize="@dimen/title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left" >

            <TextView
                android:id="@+id/detail_datetime_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkblue"
                android:text="@string/time_tag_string"
                android:textColor="@color/white"
                android:textSize="@dimen/explanation" />

            <TextView
                android:id="@+id/detail_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/explanation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/detail_speaker_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkblue"
                android:text="@string/speaker_tag_string"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/explanation" />

            <TextView
                android:id="@+id/detail_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/explanation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/detail_location_caption"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:background="@color/darkblue"
                android:text="@string/location_tag_string"
                android:textColor="@color/white"
                android:textSize="@dimen/explanation" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/explanation" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/show_direction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_direction_button_string" />
    </LinearLayout>

</LinearLayout>