<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdvancedSearch" >

    <!-- android:layout_marginTop="150dp" -->


    <!-- Set text of button as "Search" -->


    <!--
         <Button
        android:id="@+id/adsearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="AdSearch"
        android:text="@string/search" />
    -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android1:layout_centerHorizontal="true"
        android:orientation="vertical"
        android1:gravity="center_horizontal" >

       
        
        <LinearLayout
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:orientation="vertical" >

            <Button
                android1:id="@+id/date"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:onClick="showDatePickerDialog"
                android1:text="@string/pick_date_time" />

            <TextView
                android1:id="@+id/textView1"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:gravity="center_horizontal"
            android1:orientation="vertical" >

            <Button
                android1:id="@+id/place"
                android1:layout_width="match_parent"
                android1:layout_height="wrap_content"
                android1:text="@string/pick_place" />

            <TextView
                android1:id="@+id/textView2"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <TextView
            android1:id="@+id/textView3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginTop="10dp" />

        <Button
            android1:id="@+id/adsearch"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginTop="20dp"
            android1:onClick="AdSearch"
            android1:text="@string/search" />

        

    </LinearLayout>

    <!--
         <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/date"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10" />
    -->


    <!--
         <EditText
        android:id="@+id/editText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adsearch"
        android:layout_below="@+id/place"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10" />
    -->

</RelativeLayout>